부트스트랩을 사용한 소개페이지의 자기소개 추

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>KNero</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <style>
+	body {
+	    background-color: #0A2735;
+	}
+	</style>
+
+	<!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
+    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+	<div class="container" style="width: 800px;">
+		<div class="row">
+			<div class="col-md-2" style="height: 80px; background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-top: 20px; padding-left: 30px;">
+				K.Nero
+			</div>
+		</div>
+		<div class="row" style="padding-top: 100px;">
+			<div class="col-md-3">
+				<img src="./knero.jpeg" width="200px" height="200px" style="margin-left: -15px">
+			</div>
+			<div class="col-md-9" style="height: 200px; background-color: #0B2D3E; padding: 30px;">
+				<p class="lead" style="color: #FFFFFF;">Java Developer</p>
+				<small style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
+				Java 기반의 Framework 인 ExOf를 개발하고 있으며 MSA 를 추구하고 개발관련 대화를 좋아합니다.<br>
+				개발경험 : Java Framework, SPA, 안드로이드 앱, 아이폰 앱<br>
+				kwon-s-m@hanmail.net</small>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8" style="height: 200px; background-color: #2B98F0;"></div>
+			<div class="col-md-4" style="height: 200px; background-color: #2FA69A;"></div>
+		</div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+</body>
+</html>
