--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<div class="col-md-9" style="height: 200px; background-color: #0B2D3E; padding: 30px;">
 				<p class="lead" style="color: #FFFFFF;">Java Developer</p>
 				<small style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
-				Java 기반의 Framework 인 ExOf를 개발하고 있으며 MSA 를 추구하고 개발관련 대화를 좋아합니다.<br>
-				개발경험 : Java Framework, SPA, 안드로이드 앱, 아이폰 앱<br>
+				Java 기반의 Server Framework 인 ExOf를 개발하고 있으며 MSA 를 추구하고 개발관련 대화를 좋아합니다.<br>
+				개발경험 : Java Server Framework, SPA, 안드로이드 앱, 아이폰 앱<br>
 				kwon-s-m@hanmail.net</small>
 			</div>
 		</div>
