--- a/index.html
+++ b/index.html
@@ -22,27 +22,44 @@
     <![endif]-->
 </head>
 <body>
-	<div class="container" style="width: 800px;">
+	<div class="container" style="width: 1000px;">
 		<div class="row">
-			<div class="col-md-2" style="height: 80px; background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-top: 20px; padding-left: 30px;">
+			<div class="col-md-2 lead" style="height: 80px; background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-top: 20px; padding-left: 40px;">
 				K.Nero
 			</div>
 		</div>
-		<div class="row" style="padding-top: 100px;">
-			<div class="col-md-3">
-				<img src="./knero.jpeg" width="200px" height="200px" style="margin-left: -15px">
+		<div class="row" style="padding-top: 70px;">
+			<div class="col-md-3" style="border: #0A2735 2px solid;">
+				<img src="./knero.jpeg" width="246px" height="246px" style="margin-left: -15px;">
 			</div>
-			<div class="col-md-9" style="height: 200px; background-color: #0B2D3E; padding: 30px;">
+			<div class="col-md-9" style="height: 250px; background-color: #0B2D3E; padding: 30px; border: #0A2735 2px solid;">
 				<p class="lead" style="color: #FFFFFF;">Java Developer</p>
-				<small style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
+				<p style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
 				Java 기반의 Server Framework 인 ExOf를 개발하고 있으며 MSA 를 추구하고 개발관련 대화를 좋아합니다.<br>
-				개발경험 : Java Server Framework, SPA, 안드로이드 앱, 아이폰 앱<br>
-				kwon-s-m@hanmail.net</small>
+				개발경험 : Java Server Framework, SPA, 안드로이드 앱, 아이폰 앱<br><br>
+				kwon-s-m@hanmail.net</p>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-8" style="height: 200px; background-color: #2B98F0;"></div>
-			<div class="col-md-4" style="height: 200px; background-color: #2FA69A;"></div>
+			<div class="col-md-7" style="height: 200px; background-color: #2B98F0; border: #0A2735 2px solid;">
+				<a href="https://knero.github.io/ExOf">
+					<h2 style="color: #FFFFFF;">Expanstion-Oriented Framework</h2>
+				</a>
+				<p style="color: #FFFFFF;">
+					가벼운 프레임워크<br>
+					쉬운 사용 방법을 통한 빠른 서비스 호출<br>
+					지속적인 업그레이드
+				</p>
+			</div>
+			<div class="col-md-5" style="height: 200px; background-color: #2FA69A; border: #0A2735 2px solid;">
+				<br><br>
+				<a href="https://knero.github.io/SQLite-Helper">
+					<h2 style="color: #FFFFFF;">SQLite-Helper</h2>
+				</a>
+				<p style="color: #FFFFFF;">
+					SQLite Multi Thread And Single Connection Pool
+				</p>
+			</div>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
