--- a/index.html
+++ b/index.html
@@ -61,6 +61,24 @@
 				</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-3" style="height: 200px; border: #0A2735 2px solid;">
+				<a href="https://www.linkedin.com/in/seongmin-kwon-953aa2113">
+					<img src="./linkedin.png" width="245px" height="206px" style="margin-left: -15px;">
+				</a>
+			</div>
+			<div class="col-md-6" style="height: 210px; background-color: #01BBEA; border: #0A2735 2px solid;">
+			</div>
+			<div class="col-md-3" style="height: 210px; background-color: #F44336; border: #0A2735 2px solid;">
+				<br><br><br><br>
+				<a href="https://github.com/KNero/ETree">
+					<h2 style="color: #FFFFFF;">ETree</h2>
+				</a>
+				<p style="color: #FFFFFF;">
+					javascript tree component
+				</p>
+			</div>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
