링크드인 주소 변

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-3" style="height: 200px; border: #0A2735 2px solid;">
-				<a href="https://www.linkedin.com/in/seongmin-kwon-953aa2113">
+				<a href="https://www.linkedin.com/in/seongminKwon">
 					<img src="./linkedin.png" width="245px" height="206px" style="margin-left: -15px;">
 				</a>
 			</div>
