블로그 추가

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<img src="./linkedin.png" width="245px" height="206px" style="margin-left: -15px;">
 				</a>
 			</div>
-			<div class="col-md-6" style="height: 210px; background-color: #01BBEA; border: #0A2735 2px solid; font-size: 100px; padding-top: 30px; padding-left: 50px;">
+			<div class="col-md-6" style="height: 210px; background-color: #01BBEA; border: #0A2735 2px solid; font-size: 100px; padding-top: 30px;" align="center">
                 <a style="color: #FFFFFF;" href="http://jamcode.tistory.com">BLOG</a>
 			</div>
 			<div class="col-md-3" style="height: 210px; background-color: #F44336; border: #0A2735 2px solid;">
