--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
 <body>
 	<div class="container" style="width: 1000px;">
 		<div class="row">
-			<div class="col-md-2 lead" style="height: 70px; background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-top: 20px; padding-left: 40px;">
+			<div class="col-md-2 lead" style="line-height: 70px;background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-left: 40px;">
 				K.Nero
 			</div>
 		</div>
 		<div class="row" style="padding-top: 10px;">
 			<div class="col-md-3" style="border: #0A2735 2px solid;">
-				<img src="./knero.jpeg" width="246px" height="246px" style="margin-left: -15px;">
+				<img src="./knero-1.png" width="246px" height="246px" style="margin-left: -15px;">
 			</div>
-			<div class="col-md-9" style="height: 250px; background-color: #0B2D3E; padding: 30px; border: #0A2735 2px solid;">
+			<div class="col-md-3" style="border: #0A2735 2px solid;">
+				<img src="./knero-2.jpeg" width="246px" height="246px" style="margin-left: -15px;">
+			</div>
+			<div class="col-md-6" style="height: 250px; background-color: #0B2D3E; padding: 30px; border: #0A2735 2px solid;">
 				<p class="lead" style="color: #FFFFFF;">Java Developer</p>
 				<p style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
-				Java 기반의 Server Framework 인 ExOf를 개발하고 있으며 MSA 를 추구하고 개발관련 대화를 좋아합니다.<br>
-				개발경험 : Java Server Framework, SPA, 안드로이드 앱, 아이폰 앱<br><br>
+				Java 기반의 오픈소스를 개발하며 개발관련 대화를 좋아합니다.<br>
+				개발경험 : Web Service, Java Server Framework, React Native, ReactJS, 안드로이드, 아이폰<br><br>
 				kwon-s-m@hanmail.net</p>
 			</div>
 		</div>
@@ -81,9 +84,19 @@
 			</div>
 		</div>
         <div class="row">
-            <div class="col-md-12" style="height: 200px; background-color: #FFFFFF; border: #0A2735 2px solid; padding-top: 20px;" align="center">
-                <a href="https://book.hellobro.win" style="font-size: 80px;">Marker</a>
-                <div style="font-size: 20px;">Mark the moments of your life.</div>
+            <div class="col-md-6" style="height: 200px; background-color: #FFFFFF; border: #0A2735 2px solid; padding-top: 20px;" align="center">
+                <a href="https://github.com/KNero/jwt-security" style="font-size: 40px;">jwt-security</a>
+                <div style="font-size: 15px;">JWT 와 Role 을 통해서<br/>Method, Path, Rest 서비스의 접근제어를 쉽게 도와줍니다.</div>
+            </div>
+            <div class="col-md-6" style="padding: 0;">
+            	<div style="height: 100px; background-color: #874445; border: #0A2735 2px solid; padding-left: 20px" align="left">
+	                <a href="https://github.com/KNero/poi-relative-cell" style="font-size: 30px; color: #FDCC51;">FileQueue</a>
+	                <div style="font-size: 15px; color: #FDCC51;">Local file queue</div>
+	            </div>
+	            <div style="height: 100px; background-color: #FDCC51; border: #0A2735 2px solid; padding-right: 20px; padding-top: 20px" align="right">
+	                <a href="https://github.com/KNero/poi-relative-cell" style="font-size: 30px; color: #874445;">poi-relative-cell</a>
+	                <div style="font-size: 15px; color: #874445;">Improved use to POI</div>
+	            </div>
             </div>
         </div>
         <div class="row" style="height: 50px;">
