--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
             <div class="col-md-6" style="padding: 0;">
             	<div style="height: 100px; background-color: #874445; border: #0A2735 2px solid; padding-left: 20px" align="left">
-	                <a href="https://github.com/KNero/poi-relative-cell" style="font-size: 30px; color: #FDCC51;">FileQueue</a>
+	                <a href="https://github.com/KNero/FileQueue" style="font-size: 30px; color: #FDCC51;">FileQueue</a>
 	                <div style="font-size: 15px; color: #FDCC51;">Local file queue</div>
 	            </div>
 	            <div style="height: 100px; background-color: #FDCC51; border: #0A2735 2px solid; padding-right: 20px; padding-top: 20px" align="right">
