--- a/index.html
+++ b/index.html
@@ -1,108 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>KNero</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <style>
-	body {
-	    background-color: #0A2735;
-	}
-	</style>
-
-	<!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
-    <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-<body>
-	<div class="container" style="width: 1000px;">
-		<div class="row">
-			<div class="col-md-2 lead" style="line-height: 70px;background-color: #F1453D; font-size: 25px; color: #FFFFFF; padding-left: 40px;">
-				K.Nero
-			</div>
-		</div>
-		<div class="row" style="padding-top: 10px;">
-			<div class="col-md-3" style="border: #0A2735 2px solid;">
-				<img src="./knero-1.png" width="246px" height="246px" style="margin-left: -15px;">
-			</div>
-			<div class="col-md-3" style="border: #0A2735 2px solid;">
-				<img src="./knero-2.jpeg" width="246px" height="246px" style="margin-left: -15px;">
-			</div>
-			<div class="col-md-6" style="height: 250px; background-color: #0B2D3E; padding: 30px; border: #0A2735 2px solid;">
-				<p class="lead" style="color: #FFFFFF;">Java Developer</p>
-				<p style="color: #A9A9A9;">오픈소스를 지향하며 기술을 공유하는 것에 관심이 많습니다.<br>
-				Java 기반의 오픈소스를 개발하며 개발관련 대화를 좋아합니다.<br>
-				개발경험 : Web Service, Java Server Framework, React Native, ReactJS, 안드로이드, 아이폰<br><br>
-				kwon-s-m@hanmail.net</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-7" style="height: 200px; background-color: #2B98F0; border: #0A2735 2px solid;">
-				<a href="https://knero.github.io/ExOf">
-					<h2 style="color: #FFFFFF;">Expanstion-Oriented Framework</h2>
-				</a>
-				<p style="color: #FFFFFF;">
-					가벼운 프레임워크<br>
-					쉬운 사용 방법을 통한 빠른 서비스 호출<br>
-					지속적인 업그레이드
-				</p>
-			</div>
-			<div class="col-md-5" style="height: 200px; background-color: #2FA69A; border: #0A2735 2px solid;">
-				<br><br>
-				<a href="https://knero.github.io/SQLite-Helper">
-					<h2 style="color: #FFFFFF;">SQLite-Helper</h2>
-				</a>
-				<p style="color: #FFFFFF;">
-					SQLite Multi Thread And Single Connection Pool
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-3" style="height: 200px; border: #0A2735 2px solid;">
-				<a href="https://www.linkedin.com/in/seongminKwon">
-					<img src="./linkedin.png" width="245px" height="206px" style="margin-left: -15px;">
-				</a>
-			</div>
-			<div class="col-md-6" style="height: 210px; background-color: #01BBEA; border: #0A2735 2px solid; font-size: 100px; padding-top: 30px;" align="center">
-                <a style="color: #FFFFFF;" href="http://jamcode.tistory.com">BLOG</a>
-			</div>
-			<div class="col-md-3" style="height: 210px; background-color: #F44336; border: #0A2735 2px solid;">
-				<br><br><br><br>
-				<a href="https://github.com/KNero/ETree">
-					<h2 style="color: #FFFFFF;">ETree</h2>
-				</a>
-				<p style="color: #FFFFFF;">
-					javascript tree component
-				</p>
-			</div>
-		</div>
-        <div class="row">
-            <div class="col-md-6" style="height: 200px; background-color: #FFFFFF; border: #0A2735 2px solid; padding-top: 20px;" align="center">
-                <a href="https://github.com/KNero/jwt-security" style="font-size: 40px;">jwt-security</a>
-                <div style="font-size: 15px;">JWT 와 Role 을 통해서<br/>Method, Path, Rest 서비스의 접근제어를 쉽게 도와줍니다.</div>
-            </div>
-            <div class="col-md-6" style="padding: 0;">
-            	<div style="height: 100px; background-color: #874445; border: #0A2735 2px solid; padding-left: 20px" align="left">
-	                <a href="https://github.com/KNero/FileQueue" style="font-size: 30px; color: #FDCC51;">FileQueue</a>
-	                <div style="font-size: 15px; color: #FDCC51;">Local file queue</div>
-	            </div>
-	            <div style="height: 100px; background-color: #FDCC51; border: #0A2735 2px solid; padding-right: 20px; padding-top: 20px" align="right">
-	                <a href="https://github.com/KNero/poi-relative-cell" style="font-size: 30px; color: #874445;">poi-relative-cell</a>
-	                <div style="font-size: 15px; color: #874445;">Improved use to POI</div>
-	            </div>
-            </div>
-        </div>
-        <div class="row" style="height: 50px;">
-        </div>
-	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"><link rel="manifest" href="/manifest.json"/><title>Billo's Blog</title><link href="/static/css/main.9bad9c2c.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,l,f=r[0],i=r[1],a=r[2],c=0,s=[];c<f.length;c++)l=f[c],Object.prototype.hasOwnProperty.call(o,l)&&o[l]&&s.push(o[l][0]),o[l]=0;for(n in i)Object.prototype.hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(p&&p(r);s.length;)s.shift()();return u.push.apply(u,a||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,f=1;f<t.length;f++){var i=t[f];0!==o[i]&&(n=!1)}n&&(u.splice(r--,1),e=l(l.s=t[0]))}return e}var n={},o={1:0},u=[];function l(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=e,l.c=n,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(e,r){if(1&r&&(e=l(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)l.d(t,n,function(r){return e[r]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var f=this["webpackJsonpknero-brog"]=this["webpackJsonpknero-brog"]||[],i=f.push.bind(f);f.push=r,f=f.slice();for(var a=0;a<f.length;a++)r(f[a]);var p=i;t()}([])</script><script src="/static/js/2.b2d9299c.chunk.js"></script><script src="/static/js/main.12030754.chunk.js"></script></body></html>
